商品列手機版自大小調整，設計師商品第一張切成正方形

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -11,4 +11,12 @@
   opacity: 0
   transition-duration: 0.5s
 
+#left  
+  left: -5%
+
+@media screen and (max-width: 768px) 
+
+  #left  
+    left: auto
+
 
