--- a/app/views/products/contact.html.erb
+++ b/app/views/products/contact.html.erb
@@ -1,48 +1,47 @@
 
 
 	<div class="container"> 
-	   <br>
-	   <br>
-	   <br>
-	   <br> 
-		  <div class=" has-text-centered" >
-		  	<div class="title">Facbook:</div>
-		   <%= link_to("https://www.facebook.com/aboxwj") do%> 
-		  	<i class="fa fa-facebook-square fa-6 is-hidden-mobile" aria-hidden="true" style="font-size:16em"></i>
-		   <% end %>
-		   <%= link_to("https://www.facebook.com/aboxwj") do%> 
-		  	<i class="fa fa-facebook-square fa-6 is-hidden-desktop" aria-hidden="true" style="font-size:10em"></i>
-		   <% end %>
-	      </div>	
-	   <br>
-	   <br>
-	   <br>
-	   <br> 
-		  <div class=" has-text-centered" > 
-		  	<div class="title">Instagram:</div>
-		  	<%= link_to("https://www.instagram.com/le_box_leather") do%> 
-		  	<i class="fa fa-instagram is-hidden-mobile" aria-hidden="true" style="font-size:16em"></i>
-		  	<% end %>
-		  	<%= link_to("https://www.instagram.com/le_box_leather") do%> 
-		  	<i class="fa fa-instagram is-hidden-desktop" aria-hidden="true" style="font-size:10em"></i>
-		  	<% end %>
-	      </div>
-	   <br>
-	   <br>
-	   <br>
- 	  
-		  <div class=" has-text-centered" > 
-		  	<div class="title">Email:</div>
-		  	<%= mail_to "lebox1995@gmail.com" do%>
-		  	<i class="fa fa-envelope fa-6 is-hidden-mobile " aria-hidden="true" style="font-size:14em"></i>
-		  	<% end %>
-		  	<%= mail_to "lebox1995@gmail.com" do%>
-		  	<i class="fa fa-envelope fa-6 is-hidden-desktop " aria-hidden="true" style="font-size:8em"></i>
-		  	<% end %>
-		  	<div class="is-size-4 has-text-weight-bold">lebox1995@gmail.com</div>
-	      </div>
-	   <br>
-	   <br>
-	   <br>	      
+		<br class="is-hidden-mobile">
+		<br class="is-hidden-mobile">
+		<br class="is-hidden-mobile">
+		<br>
+		<br>
+		<div class="columns">
+	 		<div class="column has-text-centered" >
+			  	<div class="title">Facbook:</div>
+			   <%= link_to("https://www.facebook.com/aboxwj") do%> 
+			  	<i class="fa fa-facebook-square fa-6 is-hidden-mobile" aria-hidden="true" style="font-size:14em"></i>
+			   <% end %>
+			   <%= link_to("https://www.facebook.com/aboxwj") do%> 
+			  	<i class="fa fa-facebook-square fa-6 is-hidden-desktop" aria-hidden="true" style="font-size:8em"></i>
+			   <% end %>
+		      </div>	
+
+			  <div class="column has-text-centered" > 
+			  	<div class="title">Instagram:</div>
+			  	<%= link_to("https://www.instagram.com/le_box_leather") do%> 
+			  	<i class="fa fa-instagram is-hidden-mobile" aria-hidden="true" style="font-size:14em"></i>
+			  	<% end %>
+			  	<%= link_to("https://www.instagram.com/le_box_leather") do%> 
+			  	<i class="fa fa-instagram is-hidden-desktop" aria-hidden="true" style="font-size:8em"></i>
+			  	<% end %>
+		      </div>
+	 	  
+			  <div class="column has-text-centered" > 
+			  	<div class="title">Email:</div>
+			  	<%= mail_to "lebox1995@gmail.com" do%>
+			  	<i class="fa fa-envelope fa-6 is-hidden-mobile " aria-hidden="true" style="font-size:12em"></i>
+			  	<% end %>
+			  	<%= mail_to "lebox1995@gmail.com" do%>
+			  	<i class="fa fa-envelope fa-6 is-hidden-desktop " aria-hidden="true" style="font-size:6em"></i>
+			  	<% end %>
+			  	<div class="is-size-4 has-text-weight-bold">lebox1995@gmail.com</div>
+		      </div>			
+		</div>
+		<br>
+		<br>
+		<br>
+		 
+   
 
 	</div>
