--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,22 +1,22 @@
 <section class="section">
-	<div class="container" style="left: -5%">	
+	<div class="container" id="left">	
 		<p class="title has-text-danger "><%= flash[:note] %></p>	
 		<div class="columns" >
 			<div class="column is-2 " >
 				<aside class="menu is-hidden-mobile">
-				  <p class="menu-label is-size-5">
+				  <p class="menu-label is-size-4 has-text-weight-bold">
 				    商品類別:
 				  </p>
 				  <ul class="menu-list">
 					<% @types.each do |type| %>			  	
-					    <li><a href="#<%= type.id %>" ><%= type.name%></a></li>
+					    <li><a href="#<%= type.id %>" class="is-size-5"><%= type.name%></a></li>
 					<% end %>
 				  </ul>
 				  
 				</aside>				
 			</div>
-			<div class="column is-11">
-			<nav class="breadcrumb is-size-5 is-size-6-mobile has-text-weight-bold is-hidden-desktop" aria-label="breadcrumbs">	<ul>
+			<div class="column is-12">
+			<nav class="breadcrumb  is-size-5-mobile has-text-weight-bold is-hidden-desktop" aria-label="breadcrumbs">	<ul>
 			  	商品類別: <span>  </span>
 			<% @types.each do |type| %>			  	
 			    <li><a href="#<%= type.id %>" ><%= type.name%></a></li>
