--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,10 +3,10 @@
         <div class="columns">
         <div class="column is-5 has-text-centered" >                 
           <div class="card-image">
-            <figure class="image is-square is-hidden-mobile">
+            <figure class="image is-350x350 is-hidden-mobile" style="overflow: hidden">
                 <%= image_tag @product.pictures,style:'height:100%;max-width:none;width:auto' %>
             </figure> 
-            <figure class="image is-square is-hidden-desktop">
+            <figure class="image is-200x200 is-hidden-desktop" style="margin-left: 15%;overflow: hidden">
                 <%= image_tag @product.pictures,style:'height:100%;max-width:none;width:auto' %>
             </figure>  
           </div>         
@@ -24,15 +24,15 @@
                 <% end %> 
                             
                 </div>                                                              
-                <div class="column is-size-4 has-text-weight-semibold">
+                <div class="column is-size-5 has-text-weight-semibold">
                     價格:
-                <div class=" is-size-3 has-text-weight-bold">
+                <div class=" is-size-4 has-text-weight-bold">
                     NT$<%= @product.price %> 
                 </div>
                 </div>
-                <div class="column is-size-4 ">
+                <div class="column is-size-5 ">
                     敘述:
-                <div class="is-size-5 has-text-weight-semibold">
+                <div class="is-size-6 has-text-weight-semibold">
                     <%=simple_format  @product.description %> 
                 </div>   
                 </div> 
