商品 SHOW 圖片調整

--- a/app/views/admin/commodities/show.html.erb
+++ b/app/views/admin/commodities/show.html.erb
@@ -3,7 +3,7 @@
         <div class="columns">
         <div class="column is-5 has-text-centered" >
           <div class="card-image">
-            <figure class="image is-350x350 is-hidden-mobile" style="overflow: hidden">
+            <figure class="image is-350x350 is-hidden-mobile"  style="margin-left: 30%;overflow: hidden">
                 <%= image_tag @product.pictures,style:'height:100%;max-width:none;width:auto' %>
             </figure> 
             <figure class="image is-200x200 is-hidden-desktop" style="margin-left: 15%;overflow: hidden">
