--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -14,9 +14,19 @@
 #left  
   left: -5%
 
+#up
+  position: fixed
+  right: 5%
+  bottom: 5%
+  font-size: 4em
+
 @media screen and (max-width: 768px) 
 
   #left  
     left: auto
+
+  #up
+    bottom: 2%
+    font-size: 3em
 
 
