--- a/app/views/admin/commodities/index.html.erb
+++ b/app/views/admin/commodities/index.html.erb
@@ -80,6 +80,7 @@
 				  
 				<% end %>
 			</div>			
-		</div>			
+		</div>
+		<a href="#<%= @types.first.id %>" id="up"><i class="fa fa-arrow-circle-up" aria-hidden="true"></i></a>			
 	</div>
 </section>
