--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -66,7 +66,9 @@
 				  
 				<% end %>
 			</div>			
-		</div>			
+		</div>	
+		<a href="#<%= @types.first.id %>" id="up"><i class="fa fa-arrow-circle-up" aria-hidden="true"></i></a>
+	
 	</div>
 </section>
 
