商品列表商品TITLE

--- a/app/views/admin/commodities/index.html.erb
+++ b/app/views/admin/commodities/index.html.erb
@@ -58,7 +58,7 @@
 						    			</div>				    			
 				    					<div class="">
 				    					<%= link_to  admin_commodity_path(product) do%>	
-				    			          <%= product.name %>
+				    			          <div class="has-text-weight-bold"><%= product.name %></div>
 				    			          <p>售價 : NT$<%= product.price %>	</p>
 				    			        <% end %>  									
 				    			        </div>
