--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -52,7 +52,7 @@
 				    		<div class="card-content">
 		    					<div class="">
 		    					<%= link_to  product_path(product) do%>	
-		    			          <%= product.name %>
+		    			         <div class="has-text-weight-bold"><%= product.name %></div> 
 		    			          <p>售價 : NT$<%= product.price %>	</p>
 		    			        <% end %>  									
 		    			        </div>										
