--- a/app/views/new_order_mailer/order_done.html.erb
+++ b/app/views/new_order_mailer/order_done.html.erb
@@ -8,4 +8,7 @@
 <p>計件地址： <%= @order.address %></p>
 <p>取貨編號:  <%= @order.deliver_number %></p>
 <p>請於3日內將剩下的金額匯至此帳戶:</p>
+<li>帳戶: 一盒</li>
+<li>帳號: 0000-000-000-00</li>
 <p>謝謝您的光臨，希望本次一盒的手作能夠讓您的生活更有溫度！</p>
+<h1>!!此系統仍在做測試若收到此信請忽略!!</h1>
