--- a/app/views/new_order_mailer/new_order.html.erb
+++ b/app/views/new_order_mailer/new_order.html.erb
@@ -6,5 +6,8 @@
 <% end %>
 <p >本次消費總金額加上運費$60共 <%= @order.total %> 元</p>
 <p>計件地址： <%= @order.address %></p>
-<p>謝謝您的光臨，我們會儘快完成您的訂單，若要取消訂單請再寄信告知一盒</p>
 <p>請於3日內將一半的金額匯至此帳戶:</p>
+<li>帳戶: 一盒</li>
+<li>帳號: 0000-000-000-00</li>
+<p>謝謝您的光臨，我們會儘快完成您的訂單，若要取消訂單請再寄信告知一盒</p>
+<h1>!!此系統仍在做測試若收到此信請忽略!!</h1>
