--- a/app/views/products/designers.html.erb
+++ b/app/views/products/designers.html.erb
@@ -11,7 +11,7 @@
 		    	<figure class="image is-200x200 is-hidden-mobile" >
 		    		<%= image_tag designer.image ,style:'border-radius: 50%'%>
 		    	</figure>
-		    	<figure class="image is-256x256 is-hidden-desktop" >
+		    	<figure class="image is-256x256 is-hidden-desktop" style="margin-left: auto;margin-right: auto">
 		    		<%= image_tag designer.image ,style:'border-radius: 50%'%>
 		    	</figure>		    	
 		    </div>	    		  			
