--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -42,7 +42,7 @@
         </div>
 
         <hr>
-        <div class="column">
+        <div class="column" style="margin-left: auto;margin-right: auto;">
         <div class="title">
             商品照片:
         </div>
@@ -77,7 +77,7 @@
             </div>                
             <% end %>
             <% unless @product.image4.blank?  %>
-            <div class="column ">
+            <div class="column " >
                 <figure class="image is-hidden-mobile" style="height:800px">
                     <%= image_tag @product.image4,style:"height:100%;width:auto" %>
                 </figure> 
