--- a/app/views/products/brand.html.erb
+++ b/app/views/products/brand.html.erb
@@ -1,17 +1,23 @@
+<section class="section" style="background-color: hsl(0, 0%, 96%);padding-top: 10px;padding-bottom: 10px">
 
 	<div class="container">
 
-  <div class="column has-text-centered is-size-6 has-text-grey has-text-weight-bold is-hidden-desktop" >
+  <div class="column has-text-left is-size-6 has-text-grey has-text-weight-bold is-hidden-desktop" >
+    <%= image_tag "https://i.imgur.com/rFsUAA6.jpg" ,style:'width: 100%' %>
+    <br>
     <br>
     <p>我們把心意裝載入盒</p>
     <br>
-    <p>在一針一縫裡，放進 <span>溫暖</span> 與<span> 細語</span></p>
+    <p>在一針一縫裡，放進溫暖與細語</p>
     <br>
-    <p>在一敲一打中，寫下<span>時光</span> 和<span> 屬於</span></p>
+    <p>在一敲一打中，寫下時光和屬於</p>
     <br>
     <p>都只為你...</p>
     <br>
-    <p>在相異的材質與人事物中尋找一種契合</p>
+    <%= image_tag "https://i.imgur.com/dww2xK1.jpg" ,style:'width: 100%' %>
+    <br>
+    <br>
+    <p>在相異的材質與人事物中<br><br>尋找一種契合</p>
     <br>
     <p>透過每一分執著的縫製 </p>
     <br>
@@ -59,4 +65,5 @@
     <br>
   
 	</div>
+</div>
 </section>
