--- a/app/views/products/brand.html.erb
+++ b/app/views/products/brand.html.erb
@@ -1,4 +1,4 @@
-<section class="section" style="background-color: hsl(0, 0%, 96%);padding-top: 10px;padding-bottom: 10px">
+<section class="section" style="padding-top: 10px;padding-bottom: 10px">
 
 	<div class="container">
 
