--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,15 +1,15 @@
-<section class="section" id="bread2">
+<section class="section" id="bread2" style="padding-top: 10px; padding-bottom: -70px ; margin-top: -10px ">
 	<div class="container" id="left">	
 		<p class="title has-text-danger " ><%= flash[:note] %></p>	
-		<div class="columns"  >
-			<div class="column is-2 " >
-				<nav class="breadcrumb  is-size-5-mobile has-text-weight-bold is-hidden-desktop" aria-label="breadcrumbs"  >	<ul>
-				  	商品類別: <span >  </span>
-				<% @types.each do |type| %>			  	
-				    <li><a href="#<%= type.id %>" ><%= type.name%></a></li>
-				<% end %>		    
-				  </ul>
-				</nav>					
+			<nav class="breadcrumb  is-size-5-mobile has-text-weight-bold is-hidden-desktop" aria-label="breadcrumbs"  >	<ul>
+			  	商品類別: <span >  </span>
+			<% @types.each do |type| %>			  	
+			    <li><a href="#<%= type.id %>" ><%= type.name%></a></li>
+			<% end %>		    
+			  </ul>
+			</nav>			
+		<div class="columns"  >		
+			<div class="column is-2 is-hidden-mobile" >		
 				<aside class="menu is-hidden-mobile"  id="bread">
 				  <p class="menu-label is-size-4 has-text-weight-bold">
 				    商品類別:
