--- a/app/views/products/brand.html.erb
+++ b/app/views/products/brand.html.erb
@@ -28,7 +28,21 @@
     <p>讓Le'box成為我們滋養生活的方式</p>
     <br>
   </div>
+
   <div class="column has-text-left is-size-5 has-text-grey has-text-weight-bold is-hidden-mobile" style="background-image: url(https://i.imgur.com/rFsUAA6.jpg);padding: 50px;">
+    <div class="columns has-text-right">
+<div class="column has-text-weight-bold has-text-white" >
+    facebook:
+   <%= link_to("https://www.facebook.com/aboxwj") do%> 
+    <i class="fa fa-facebook-square fa-6 " aria-hidden="true" style="font-size:2em;color:white"></i>
+   <% end %>
+   <span>/</span>
+   instagram:
+    <%= link_to("https://www.instagram.com/le_box_leather") do%> 
+    <i class="fa fa-instagram " aria-hidden="true" style="font-size:2em;color:white"></i>
+    <% end %>   
+  </div>                  
+</div>
     <br>
     <br>
     <br>
