--- a/app/views/products/contact.html.erb
+++ b/app/views/products/contact.html.erb
@@ -6,42 +6,29 @@
 		<br class="is-hidden-mobile">
 		<br>
 		<br>
-		<div class="columns">
-	 		<div class="column has-text-centered" >
-			  	<div class="title">Facbook:</div>
-			   <%= link_to("https://www.facebook.com/aboxwj") do%> 
-			  	<i class="fa fa-facebook-square fa-6 is-hidden-mobile" aria-hidden="true" style="font-size:14em"></i>
-			   <% end %>
-			   <%= link_to("https://www.facebook.com/aboxwj") do%> 
-			  	<i class="fa fa-facebook-square fa-6 is-hidden-desktop" aria-hidden="true" style="font-size:8em"></i>
-			   <% end %>
-		      </div>	
+		<div class="column is-4 is-10-mobile is-offset-4 is-offset-1-mobile box">
+			<form method="POST" action="http://formspree.io/lebox1995@gmail.com">
+				<div class="feild">
+					<p class="label">姓名:</p>
+					<input type="name" name="name" placeholder="姓名" class="input">	
+				</div>
 
-			  <div class="column has-text-centered" > 
-			  	<div class="title">Instagram:</div>
-			  	<%= link_to("https://www.instagram.com/le_box_leather") do%> 
-			  	<i class="fa fa-instagram is-hidden-mobile" aria-hidden="true" style="font-size:14em"></i>
-			  	<% end %>
-			  	<%= link_to("https://www.instagram.com/le_box_leather") do%> 
-			  	<i class="fa fa-instagram is-hidden-desktop" aria-hidden="true" style="font-size:8em"></i>
-			  	<% end %>
-		      </div>
-	 	  
-			  <div class="column has-text-centered" > 
-			  	<div class="title">Email:</div>
-			  	<%= mail_to "lebox1995@gmail.com" do%>
-			  	<i class="fa fa-envelope fa-6 is-hidden-mobile " aria-hidden="true" style="font-size:12em"></i>
-			  	<% end %>
-			  	<%= mail_to "lebox1995@gmail.com" do%>
-			  	<i class="fa fa-envelope fa-6 is-hidden-desktop " aria-hidden="true" style="font-size:6em"></i>
-			  	<% end %>
-			  	<div class="is-size-4 has-text-weight-bold">lebox1995@gmail.com</div>
-		      </div>			
-		</div>
-		<br>
-		<br>
-		<br>
-		 
-   
+				<div class="field">
+					<p class="label">你的信箱:</p>
+					<input type="email" name="email" placeholder="你的信箱" class="input">
+				</div>
 
+				<div class="field">
+					<p class="label">
+						你要告訴一盒的話:
+					</p>
+				    <textarea name="message" placeholder="你要告訴一盒的話..." class="textarea"></textarea>					
+				</div>
+
+				<button type="submit" class="button">Send</button>
+			</form>
+		</div>		 
 	</div>
+
+
+
