--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="columns">
-  <div class="column  is-2 is-offset-5">
+  <div class="column  is-2 is-offset-5 is-10-mobile is-offset-1-mobile">
     <br>
     <br>
     <br>
