--- a/app/views/products/contact.html.erb
+++ b/app/views/products/contact.html.erb
@@ -6,31 +6,12 @@
 		<br class="is-hidden-mobile">
 
 		<div class="column is-4 is-10-mobile is-offset-4 is-offset-1-mobile box">
-			<form method="POST" action="http://formspree.io/lebox1995@gmail.com">
-				<div class="feild">
-					<p class="label">姓名:</p>
-					<input type="name" name="name" placeholder="姓名" class="input">	
-				</div>
-
-				<div class="field">
-					<p class="label">你的信箱:</p>
-					<input type="email" name="email" placeholder="你的信箱" class="input">
-				</div>
-
-				<div class="field">
-					<p class="label">
-						你要告訴一盒的話:
-					</p>
-				    <textarea name="message" placeholder="你要告訴一盒的話..." class="textarea"></textarea>					
-				</div>
-
-				<button type="submit" class="button">Send</button>
-			</form>
+			<a href="mailto:lebox1995@gmail.com">Contact</a>
 		</div>	
 		<br>
 			 <br>
 			 <br>	 
 	</div>
-
+<script src="https://squaresend.com/squaresend.js"></script>
 
 
