聯絡方式以及臉書IG的重新編排

--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -10,7 +10,7 @@
           <% end %>             
           </div>
 
-            <div class="navbar-item">
+            <div class="navbar-item" style="padding-left: 0px;">
               <%= link_to("https://www.facebook.com/aboxwj") do%> 
               <i class="fa fa-facebook-square fa-6 " aria-hidden="true" style="font-size:2em"></i>
              <% end %>                 
@@ -129,7 +129,7 @@
       dots[slideIndex-1].className += " w3-white";
     };
 
-     sqs_title = "聯絡一盒";
+    sqs_title = "聯絡一盒";
     sqs_label_submit = "寄信";
     sqs_label_name = "姓名";
     sqs_label_email = "你的信箱";
