聯絡方式以及臉書IG的重新編排

--- a/app/views/admin/commodities/index.html.erb
+++ b/app/views/admin/commodities/index.html.erb
@@ -1,4 +1,4 @@
-<section class="section" id="bread2">
+<section class="section" id="bread2" style="padding-top: 10px; padding-bottom: -70px ; margin-top: -10px ">
 	<div class="container" id="left">	
 		<p class="title has-text-danger "><%= flash[:note] %></p>	
 		<div class="columns">
