--- a/app/views/admin/commodities/index.html.erb
+++ b/app/views/admin/commodities/index.html.erb
@@ -32,9 +32,9 @@
 				  <hr>
 				<% end %>		  
 
-				  <div class="columns is-multiline">
+				  <div class="columns is-multiline is-desktop is-mobile">
 				  	<% type.products.each do |product| %>
-						    <div class="column is-2" id="floatobject">
+						    <div class="column is-2-desktop is-6-mobile " id="floatobject" style="padding: 3px">
 						    	<div class="card" id="floatobject2">
 						    		<div class="card-image">
 						    			<figure class="image is-200x200 is-hidden-mobile" id="float" style="width:100%">
@@ -48,7 +48,7 @@
 						    				<% end %>
 						    			</figure>				    			
 						    		</div>				    		
-				    		<div class="card-content" style="padding-top: 0px">
+				    		<div class="card-content is-size-7-mobile" style="padding-top: 0px">
 						    			<div class="column has-text-right">
 						    			<%= link_to  edit_admin_commodity_path(product) do%>
 						    			<div class="button is-medium ">
