--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -24,9 +24,9 @@
             </div>
             <div class="navbar-item" style="padding-left: 0px;padding-right: 0px">/</div>
             <div class="navbar-item " >
-            <a href="mailto:lebox1995@gmail.com">
-              <i class="fa fa-envelope-square" aria-hidden="true" style="font-size:2em"></i>
-            </a> 
+              <a href="mailto:lebox1995@gmail.com">
+                <i class="fa fa-envelope-square" aria-hidden="true" style="font-size:2em"></i>
+              </a> 
             
             </div>
 
@@ -134,10 +134,10 @@
     sqs_label_name = "姓名";
     sqs_label_email = "你的信箱";
     sqs_label_message = "信件內容";
-    sqs_message = "我想告訴一盒...";
-    sqs_subject = "信件主旨";
-    sqs_name = "你的姓名";
-    sqs_email = "你的信箱";
+    sqs_placeholder_message = "我想告訴一盒...";
+    sqs_placeholder_subject = "信件主旨";
+    sqs_placeholder_name = "你的姓名";
+    sqs_placeholder_email = "你的信箱";
     sqs_label_subject = "信件主旨";
 </script>
 <script src="https://squaresend.com/squaresend.js">
