--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -139,6 +139,8 @@
     sqs_placeholder_name = "你的姓名";
     sqs_placeholder_email = "你的信箱";
     sqs_label_subject = "信件主旨";
+    sqs_css=".content{height:150px}";
+    sqs_css=".body{position:static}";
 </script>
 <script src="https://squaresend.com/squaresend.js">
 
