--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -140,7 +140,7 @@
     sqs_placeholder_email = "你的信箱";
     sqs_label_subject = "信件主旨";
     sqs_css=".content{height:150px}";
-    sqs_css=".body{position:static}";
+    sqs_css=".body{position:absolute,top:0px}";
 </script>
 <script src="https://squaresend.com/squaresend.js">
 
