--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -139,7 +139,7 @@
     sqs_placeholder_name = "你的姓名";
     sqs_placeholder_email = "你的信箱";
     sqs_label_subject = "信件主旨";
-    sqs_css=".sqs-container{position:absolute}";
+    sqs_css="@media ( max-width:700px ) { .sqs-container{position:absolute;top:10%;width:95%;}";
 </script>
 <script src="https://squaresend.com/squaresend.js">
 
