--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -22,8 +22,8 @@
               <i class="fa fa-instagram " aria-hidden="true" style="font-size:2em"></i>
               <% end %>                          
             </div>
-            <div class="navbar-item" style="padding-left: 0px;padding-right: 0px">/</div>
-            <div class="navbar-item " >
+            <div class="navbar-item is-hidden-mobile" style="padding-left: 0px;padding-right: 0px">/</div>
+            <div class="navbar-item is-hidden-mobile" >
               <a href="mailto:lebox1995@gmail.com">
                 <i class="fa fa-envelope-square" aria-hidden="true" style="font-size:2em"></i>
               </a> 
@@ -129,7 +129,7 @@
       dots[slideIndex-1].className += " w3-white";
     };
 
-    sqs_css="@media ( max-width:768px ) { .sqs-container{position:absolute;top:10%;width:95%;}";
+    sqs_css="@media( max-width:768px ){ .sqs-container{position:absolute;top:10%;width:95%;}";
     sqs_title = "聯絡一盒";
     sqs_label_submit = "寄信";
     sqs_label_name = "姓名";
