--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -56,7 +56,7 @@
             <%= link_to '登入',new_user_session_path ,class:"navbar-item" %>               
           <% end %>
             <% if work.working %>
-              <%= link_to '下訂單',orders_path,class:"navbar-item"%>  
+              <%= link_to '購物車',orders_path,class:"navbar-item"%>  
             <% else %>
               <p class="navbar-item">暫時歇業</p>
             <% end %> 
