--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,7 +14,7 @@
 
         <div class="column"> 
               <div class=" is-size-2 has-text-weight-bold is-size-4-mobile"> <%= @product.name %> </div>                                      
-                <div class="column has-text-right">
+                <div class="column has-text-left">
                 <% if !@product.shelve %>
                 <p class="button is-danger is-outlined">缺貨中</p>  
                 <% elsif !work.working %>
