--- a/app/views/admin/commodities/_form.html.erb
+++ b/app/views/admin/commodities/_form.html.erb
@@ -58,33 +58,49 @@
       <% @product.errors.full_messages_for(:image1).each do |msg| %>
         <p class="help is-danger"><%= msg %></p>
    <% end %>
+  <div class="form-group">
+  <img id="img_prev1" width=300 height=300 src="#" alt="請選擇照片" class="img-thumbnail hidden"/> <br/>   
    <span class="btn btn-default btn-file">
-  <%= f.file_field :image1%>
+  <%= f.file_field :image1, id: "avatar-upload1"%>
   </span>  
+    <%= f.hidden_field :image1_cache %> 
   </div>
+</div>
     <div class="field">
       <% @product.errors.full_messages_for(:image2).each do |msg| %>
         <p class="help is-danger"><%= msg %></p>
    <% end %>
+  <div class="form-group">
+  <img id="img_prev2" width=300 height=300 src="#" alt="請選擇照片" class="img-thumbnail hidden"/> <br/> 
     <span class="btn btn-default btn-file">
-  <%= f.file_field :image2%>
+  <%= f.file_field :image2, id: "avatar-upload2"%>
   </span>   
+    <%= f.hidden_field :image2_cache %>  
+   </div> 
   </div>
     <div class="field">
       <% @product.errors.full_messages_for(:image3).each do |msg| %>
         <p class="help is-danger"><%= msg %></p>
    <% end %>
-  <span class="btn btn-default btn-file">
-  <%= f.file_field :image3%>
-  </span> 
+    <div class="form-group">
+    <img id="img_prev3" width=300 height=300 src="#" alt="請選擇照片" class="img-thumbnail hidden"/> <br/> 
+      <span class="btn btn-default btn-file">
+    <%= f.file_field :image3, id: "avatar-upload3"%>
+    </span>   
+    <%= f.hidden_field :image3_cache %>  
+   </div> 
   </div>
     <div class="field">
       <% @product.errors.full_messages_for(:image4).each do |msg| %>
         <p class="help is-danger"><%= msg %></p>
    <% end %>
-   <span class="btn btn-default btn-file">
-  <%= f.file_field :image4%>
-  </span> 
+    <div class="form-group">
+    <img id="img_prev4" width=300 height=300 src="#" alt="請選擇照片" class="img-thumbnail hidden"/> <br/> 
+      <span class="btn btn-default btn-file">
+    <%= f.file_field :image4, id: "avatar-upload4"%>
+    </span>   
+    <%= f.hidden_field :image4_cache %>  
+   </div>  
   </div>
 <div class="columns">
   <div class="column ">
