fullhd min-width: 1550px

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ overflow:hidden;
 .image .is-3by2{
 height: 100%;};
 
-
+$fullhd: 1550px + (2 * $gap) !default
 
   
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
