--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@ html{
 
 $success:rgb(54,133,12);
 $danger:hsl(348, 100%, 50%);
+$gap: 32px !default;
 $fullhd:1400px + (2 * $gap) !default;
 $dimensions: 16 24 32 48 64 96 128 200 230 256 272 318 350 512 1000;
 
