--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@ $success:rgb(54,133,12);
 $danger:hsl(348, 100%, 50%);
 $gap: 32px;
 $fullhd:2000px ;
+ $widescreen: 1200px + (2 * $gap) ;
 $dimensions: 16 24 32 48 64 96 128 200 230 256 272 318 350 512 1000;
 
 .image{ 
