--- a/app/views/products/order_index.html.erb
+++ b/app/views/products/order_index.html.erb
@@ -37,8 +37,8 @@
 						<div class="column is-7">
 					      <%= f.label :quantities,'數量:', class: 'label is-size-4 ' %>							
 						</div>
-						<div class="column">
-					      <%= f.number_field :quantities,class: 'input', min:1 %>
+						<div class="column is-2" style="min-width:68px;">
+					      <%= f.number_field :quantities,class: 'input', min:1,style:'min-width:68px;' %>
 						</div>
 						<div class="column">
 					      <%= f.submit '計算價格' ,class:"button is-light"%>							
