--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -102,7 +102,31 @@
 </section>
 
 <script >
+
+
+
     var slideIndex = 1;
+
+    carousel();
+
+    function carousel() {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        var dots = document.getElementsByClassName("demo");
+        for (i = 0; i < x.length; i++) {
+          x[i].style.display = "none";
+        }
+         for (i = 0; i < dots.length; i++) {
+         dots[i].className = dots[i].className.replace(" w3-white", "");
+          }
+
+        slideIndex++;
+        if (slideIndex > x.length) {slideIndex = 1}
+        x[slideIndex-1].style.display = "block";
+        dots[slideIndex-1].className += " w3-white";      
+        setTimeout(carousel, 5000); // Change image every 2 seconds
+    };
+
     showDivs(slideIndex);
 
     function plusDivs(n) {
