--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -40,7 +40,7 @@
 					    		<div class="card-image ">
 					    			<figure class="image is-200x200 is-hidden-mobile" id="float" style="width:100%">
 					    				<%= link_to  product_path(product) do%>
-					    				<%= image_tag product.pictures,style:'height:100%;max-width:none;width:auto' %>
+					    				<%= image_tag product.pictures,style:'height:100%;max-width:none;width:auto',class:'fimg' %>
 					    				<% end %>
 					    			</figure>
 					    			<figure class="image is-square is-hidden-desktop" id="float" style="width:100%">
