--- a/app/views/new_order_mailer/new_order.html.erb
+++ b/app/views/new_order_mailer/new_order.html.erb
@@ -5,7 +5,7 @@
 	<li><%= ordered_item.product.name %> <span><%= ordered_item.quantities %>個</span> , <span>單筆金額 <%= ordered_item.total %>元</span></li>
 <% end %>
 <p >本次消費總金額加上運費$60共 <%= @order.total %> 元</p>
-<p>計件地址： <%= @order.address %></p>
+<p>寄件地址： <%= @order.address %></p>
 <p>請於3日內將一半的金額匯至此帳戶:</p>
 <li>帳戶: 一盒</li>
 <li>帳號: 0000-000-000-00</li>
